--- a/info1/exercise/01/Makefile
+++ b/info1/exercise/01/Makefile
@@ -1,5 +1,5 @@
 CFLAGS=-Wall -Wextra -ansi -pedantic
 CC=gcc
 
-all: aufgabe3.c aufgabe3b.c
-	$(CC) -o aufgabe.bin aufgabe3b.c $(ARGS)
+all: aufgabe4d.c
+	$(CC) -o aufgabe.bin aufgabe4d.c $(ARGS)
